hw5_ws/log/build_2024-03-11_04-31-37/turtle_run/stderr.log
  File "/home/vboxuser/hw5_ws/install/turtle_run/lib/python3.10/site-packages/turtle_run/turtle_run_client.py", line 116
    str(feedback_msg.feedback.current_position_y)})")
                                                    ^
SyntaxError: f-string expression part cannot include a backslash

